packages/vue2-client/src/styles/styles.scss
@import './variables';
@import './bootstrap';
@import './global';
@import './main';
*,
::after,
::before {
  box-sizing: border-box;
}

.center {
  margin: auto;
  padding: 10px;
  position: absolute;
  top: 50%;
  transform: translate(0, -50%);
}

.global-overlay {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: rgba(1, 1, 1, 0.77);
  z-index: 50;
}

body,
html {
  height: 100%;
}

body {
  margin: 0;
  // background: #000 url(../img/demo-bg.jpg) 0 0 repeat;
  position: relative;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
}

p:not(:has(> img)) {

  text-indent: 15px;
  text-align: justify;
  text-justify:auto;

  -webkit-hyphens: auto;
  -webkit-hyphenate-limit-before: 3;
  -webkit-hyphenate-limit-after: 3;
  -webkit-hyphenate-limit-chars: 6 3 3;
  -webkit-hyphenate-limit-last: always;
  -webkit-hyphenate-limit-zone: 8%;

  -moz-hyphens: auto;
  -moz-hyphenate-limit-chars: 6 3 3;
  -moz-hyphenate-limit-lined: 2;
  -moz-hyphenate-limit-last: always;
  -moz-hyphenate-limit: 8%;

  -ms-hyphens: auto;
  -ms-hyphens-limit-chars: 6 3 3;
  -ms-hyphens-limit-lines: 2;
  -ms-hyphens-limit-last: always;
  -ms-hyphens-limit-zone: 8%;

  hyphens: auto;
  hyphenate-limit-chars: 6 3 3;
  hyphenate-limit-lies: 2;
  hyphenate-limit-last: always;
  hyphenate-limit-zone: 8%;

}

p > img {
  max-width: 99%;
  border-radius: 6px;
}

.logo {
  padding-left: 10px;
  margin-top: -2px;
}

.logo img {
  height: 18px;
}

.logo a {
  color: #fff;
  display: flex;
  align-items: center;
  text-decoration: none;
  font-size: 18px;
  letter-spacing: -0.8px;
  font-weight: 500;
}

.logo strong {
  margin-left: 6px;
  text-transform: uppercase;
}

.logo strong span {
  color: #00a6eb;
}

@media (max-width: 768px) {
  .logo {
    display: none;
  }
}

.responsive-google-slides {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 Ratio */
  height: 0;
  overflow: hidden;
}

.responsive-google-slides iframe {
  border: 0;
  position: absolute;
  top: 0;
  left: 0;
  width: 100% !important;
  height: 100% !important;
}

